--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-intl": "^6.6.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
